@@ -1,3 +1,8 @@
+2016-01-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* dpxfile.c: Change \ to / for WIN32 also in the case where
+	HAVE_MKSTEMP is defined (win32 only).
+
 2015-12-30  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* epdf.c: Fix in handling of page number for XeTeX.
